--- a/dive-inn-express/package.json
+++ b/dive-inn-express/package.json
@@ -4,11 +4,16 @@
   "description": "Express API server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.6",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "typescript": "^3.8.3"
   }
 }
