--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "e2e": "ng e2e",
     "tsc": "tsc",
     "app-serve": "concurrently \"(cd server && npm run dev)\"  \"npm run start\"",
-    "heroku-postbuild": "tsc && ng build --aot --prod"
+    "heroku-postbuild": "npm run tsc && ng build --aot --prod"
   },
   "engines": {
     "node": "12.16.x"
