--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc",
+    "tsc": "echo \"SERVER PKG TSC\" && tsc",
     "dev": "ts-node-dev --respawn --transpileOnly ./app/server.ts",
-    "prod": "tsc && node ./dist/server.js",
+    "prod": "echo \"SERVER PKG PROD\" && npm run tsc && node ./dist/server.js",
     "app-serve": "concurrently \"ng serve\" \"ts-node-dev app/server.ts\""
   },
   "repository": {
