--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "app-serve": "concurrently \"(cd server && npm run dev)\"  \"npm run start\"",
-    "heroku-postbuild": "ng build --aot --prod"
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
