express server for angular, publish dist contents

--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,8 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@types/compression": "^1.7.0",
+    "compression": "^1.7.4",
     "express": "^4.17.1"
   }
 }
