--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "e2e": "ng e2e",
     "tsc": "echo \"ROOT PKG TSC\" && tsc",
     "app-serve": "concurrently \"(cd server && npm run dev)\"  \"npm run start\"",
-    "heroku-postbuild": "echo \"ROOT PKG POSTBUILD\" && npm run tsc && ng build --prod"
+    "heroku-postbuild": "echo \"ROOT PKG POSTBUILD\" && ng build --prod"
   },
   "engines": {
-    "node": "12.16.x"
+    "node": "12.16.x",
+    "npm": "6.14.x"
   },
   "private": true,
   "dependencies": {
