--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^12.11.1",
     "compression": "^1.7.4",
     "express": "^4.17.1",
+    "path": "^0.12.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "typescript": "~3.8.3",
