--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "tsc": "echo \"SERVER PKG TSC\" && tsc",
     "dev": "ts-node-dev --respawn --transpileOnly ./app/server.ts",
     "prod": "echo \"SERVER PKG PROD\" && npm run tsc && node ./dist/server.js",
-    "app-serve": "concurrently \"ng serve\" \"ts-node-dev app/server.ts\""
+    "app-serve": "concurrently \"ng serve --proxy-config proxy.config.json \" \"ts-node-dev app/server.ts\""
   },
   "repository": {
     "type": "git",
