--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,5 @@
-// {
-//   "compilerOptions": {
-//     "module": "commonjs",
-//     "target": "es6",
-//     "noImplicitAny": true,
-//     "moduleResolution": "node",
-//     "sourceMap": true,
-//     "outDir": "dist",
-//     "baseUrl": ".",
-//     "paths": {
-//       "*": [
-//         "node_modules/*",
-//         "src/types/*"
-//       ]
-//     }
-//   },
-//   "include": [
-//     "src/**/*"
-//   ]
-// }
-
-
 {
-  "compileOnSave": false,
+  "compileOnSave": true,
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
