--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-#**/dist
+#**/dist - dist files included until I can figure out Heroku TSC builds
 /tmp
 /out-tsc
 # Only exists if Bazel was run
