update to lastest version
Co-authored-by: mvondrak@gmail.com <mvondrak@gmail.com>

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "tsc": "tsc",
-    "update": "npm i && cd server && npn i",
+    "latest": "npm i && cd server && npn i",
     "app-serve": "concurrently \"(cd server && npm run dev)\"  \"npm run start\"",
     "heroku-predeploy": "cd server && tsc",
     "heroku-postbuild": "echo \"HEROKU POSTBUILD\" && ng build --aot --prod"
@@ -17,39 +17,38 @@
   "engines": {
     "node": "12.16.x",
     "npm": "6.14.x"
-  }, 
+  },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.4",
-    "@angular/common": "~9.1.4",
-    "@angular/compiler": "~9.1.4",
-    "@angular/core": "~9.1.4",
-    "@angular/forms": "~9.1.4",
-    "@angular/platform-browser": "~9.1.4",
-    "@angular/platform-browser-dynamic": "~9.1.4",
-    "@angular/router": "~9.1.4",
-    "@types/node": "^12.11.1",
+    "@angular/animations": "^9.1.5",
+    "@angular/common": "^9.1.5",
+    "@angular/compiler": "^9.1.5",
+    "@angular/core": "^9.1.5",
+    "@angular/forms": "^9.1.5",
+    "@angular/platform-browser": "^9.1.5",
+    "@angular/platform-browser-dynamic": "^9.1.5",
+    "@angular/router": "^9.1.5",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "path": "^0.12.7",
     "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
+    "tslib": "^1.11.2",
     "typescript": "~3.8.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.4",
     "@angular/cli": "~9.1.4",
-    "@angular/compiler-cli": "~9.1.4",
-    "@angular/language-service": "~9.1.4",
+    "@angular/compiler-cli": "^9.1.5",
+    "@angular/language-service": "^9.1.5",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.38",
     "codelyzer": "^5.1.2",
     "concurrently": "^5.2.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~5.0.0",
+    "karma": "^5.0.5",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
