--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "latest": "npm i && cd server && npm i",
     "app-serve": "concurrently \"(cd server && npm run dev)\"  \"npm run start\"",
     "heroku-predeploy": "cd server && tsc",
-    "heroku-postbuild": "echo \"HEROKU POSTBUILD\" && ng build --aot --prod"
+    "heroku-postbuild": "echo \"HEROKU POSTBUILD\" && ng build --aot --prod",
+    "db_test_recreate": "winpty mysql -uroot -p db/RecreateTestDatabase.sql"
   },
   "engines": {
     "node": "12.16.x",
@@ -20,39 +21,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.5",
-    "@angular/common": "^9.1.5",
-    "@angular/compiler": "^9.1.5",
-    "@angular/core": "^9.1.5",
-    "@angular/forms": "^9.1.5",
-    "@angular/platform-browser": "^9.1.5",
-    "@angular/platform-browser-dynamic": "^9.1.5",
-    "@angular/router": "^9.1.5",
+    "@angular/animations": "^9.1.7",
+    "@angular/common": "^9.1.7",
+    "@angular/compiler": "^9.1.7",
+    "@angular/core": "^9.1.7",
+    "@angular/forms": "^9.1.7",
+    "@angular/platform-browser": "^9.1.7",
+    "@angular/platform-browser-dynamic": "^9.1.7",
+    "@angular/router": "^9.1.7",
+    "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "path": "^0.12.7",
     "rxjs": "~6.5.4",
-    "tslib": "^1.11.2",
+    "tslib": "^1.13.0",
     "typescript": "~3.8.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.4",
-    "@angular/cli": "~9.1.4",
-    "@angular/compiler-cli": "^9.1.5",
-    "@angular/language-service": "^9.1.5",
+    "@angular-devkit/build-angular": "^0.901.6",
+    "@angular/cli": "^9.1.6",
+    "@angular/compiler-cli": "^9.1.7",
+    "@angular/language-service": "^9.1.7",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.38",
+    "@types/node": "^12.12.39",
     "codelyzer": "^5.1.2",
     "concurrently": "^5.2.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.0.5",
+    "karma": "^5.0.7",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
