--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@angular/platform-browser": "^9.1.7",
     "@angular/platform-browser-dynamic": "^9.1.7",
     "@angular/router": "^9.1.7",
+    "@types/cookie-parser": "^1.4.2",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
