--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
-    "rxjs": "~6.5.4",
+    "rxjs": "^6.5.5",
     "tslib": "^1.13.0",
     "typescript": "~3.8.3",
     "zone.js": "~0.10.2"
@@ -48,7 +48,8 @@
     "@angular/language-service": "^9.1.7",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.39",
+    "@types/mysql": "^2.15.12",
+    "@types/node": "^12.12.42",
     "codelyzer": "^5.1.2",
     "concurrently": "^5.2.0",
     "jasmine-core": "~3.5.0",
