--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/MikeVondrak/DiveInn2020#readme",
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/mysql": "^2.15.12",
+    "@types/node": "^14.0.5",
     "concurrently": "^5.2.0",
     "ts-node": "^8.10.1",
     "ts-node-dev": "^1.0.0-pre.44",
@@ -31,6 +33,7 @@
   "dependencies": {
     "@types/compression": "^1.7.0",
     "compression": "^1.7.4",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "rxjs": "^6.5.5"
   }
 }
