--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "tsc": "tsc",
     "latest": "npm i && cd server && npm i",
     "app-serve": "concurrently \"(cd server && npm run dev)\"  \"npm run start\"",
-    "heroku-predeploy": "cd server && tsc",
+    "heroku-predeploy": "ng build --prod && cd server && tsc",
     "heroku-postbuild": "echo \"HEROKU POSTBUILD\" && ng build --aot --prod",
     "db_test_recreate": "winpty mysql -uroot -p db/RecreateTestDatabase.sql"
   },
