--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
+    "ts-node-dev": "^1.0.0-pre.44",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
   }
