--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser": "^9.1.7",
     "@angular/platform-browser-dynamic": "^9.1.7",
     "@angular/router": "^9.1.7",
+    "@ngrx/store": "^9.2.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/snapsvg": "^0.5.0",
     "body-parser": "^1.19.0",
