--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dive-inn",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.config.json",
@@ -51,6 +52,8 @@
     "@angular/cli": "^9.1.6",
     "@angular/compiler-cli": "^9.1.7",
     "@angular/language-service": "^9.1.7",
+    "@types/compression": "^1.7.0",
+    "@types/express": "^4.17.6",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/mysql": "^2.15.12",
