--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "echo \"SERVER PKG TSC\" && tsc",
     "dev": "ts-node-dev --respawn --transpileOnly ./app/server.ts",
+    "dev:debug": "ts-node-dev --inspect=4321 --respawn --transpileOnly ./app/server.ts",
     "prod": "echo \"SERVER PKG PROD\" && npm run tsc && node ./dist/server.js",
     "app-serve": "concurrently \"ng serve --proxy-config proxy.config.json \" \"ts-node-dev app/server.ts\""
   },
@@ -20,6 +21,7 @@
     "url": "https://github.com/MikeVondrak/DiveInn2020/issues"
   },
   "homepage": "https://github.com/MikeVondrak/DiveInn2020#readme",
+  "type": "module",
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/mysql": "^2.15.12",
