--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
