--- a/server/package.json
+++ b/server/package.json
@@ -34,8 +34,10 @@
   },
   "dependencies": {
     "@types/compression": "^1.7.0",
+    "@types/source-map": "^0.5.7",
     "compression": "^1.7.4",
     "express": "^4.17.1",
-    "rxjs": "^6.5.5"
+    "rxjs": "^6.6.0",
+    "source-map": "^0.7.3"
   }
 }
